# PadelTournament

./: .gitignore  Makefile  PadelTournament.spec  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: sample_tournament.json
scripts/: run_app.py
src/padel_tournament/: __init__.py  __main__.py  application.py
src/padel_tournament/core/: __init__.py  scheduler.py  state.py
src/padel_tournament/services/: __init__.py  persistence.py  ranking.py
src/padel_tournament/themes/: __init__.py  material_dark.qss  material_light.qss
src/padel_tournament/ui/: __init__.py  loaders.py  main_window.py
src/padel_tournament/ui/designer/: __init__.py  main_window.ui  names_page.ui  score_page.ui  setup_page.ui
src/padel_tournament/ui/designer/pages/main_window/: main_window.ui  main_window_ui.py
src/padel_tournament/ui/designer/pages/names_page/: names_page.ui  names_page_ui.py
src/padel_tournament/ui/designer/pages/score_page/: score_page.ui  score_page_ui.py
src/padel_tournament/ui/designer/pages/setup_page/: setup_page.ui  setup_page_ui.py
src/padel_tournament/ui/designer/panels/: score_analytics_panel.ui  score_analytics_panel_ui.py
src/padel_tournament/ui/pages/: __init__.py  names_page.py  score_builder.py  score_components.py  score_page.py  score_payload.py  setup_page.py
src/padel_tournament/ui/themes/: style_constants.py
src/padel_tournament/ui/widgets/: __init__.py  performance_plot.py  performance_presenter.py
tests/: test_performance_charts.py  test_ranking.py  test_scheduler.py  test_state.py
